SUBDIRS = Rivet
EXTRA_DIST = tclap AIDA TinyXML LWH eigen osdir.hh

# nobase_include_HEADERS = \
# eigen/util.h \
# eigen/regressioninternal.h \
# eigen/regression.h \
# eigen/vector.h \
# eigen/ludecompositionbase.h \
# eigen/ludecomposition.h \
# eigen/linearsolver.h \
# eigen/linearsolverbase.h \
# eigen/matrix.h \
# eigen/vectorbase.h \
# eigen/projective.h \
# eigen/matrixbase.h \
# Math/Matrices.hh \
# Math/Vector3.hh \
# Math/VectorN.hh \
# Math/MatrixN.hh \
# Math/MatrixDiag.hh \
# Math/StdHeader.hh \
# Math/Vectors.hh \
# Math/LorentzTrans.hh \
# Math/Matrix3.hh \
# Math/MathUtils.hh \
# Math/Vector4.hh \
# Math/Math.hh \
# Math/Units.hh \
# Math/Constants.hh
