SUBDIRS = Rivet
EXTRA_DIST = tclap TinyXML

## Remove these when YODA is available... they are
## being installed since external analysis builds need them
nobase_include_HEADERS = \
AIDA/IFunctionCatalog.h \
AIDA/ITupleFactory.h \
AIDA/IHistogram2D.h \
AIDA/IFunction.h \
AIDA/AIDA.h \
AIDA/IAxisStyle.h \
AIDA/IProfile2D.h \
AIDA/IPlotterLayout.h \
AIDA/IBaseHistogram.h \
AIDA/IPlotter.h \
AIDA/IDataStyle.h \
AIDA/IBaseStyle.h \
AIDA/IInfo.h \
AIDA/ICloud2D.h \
AIDA/IHistogram.h \
AIDA/IDataPointSet.h \
AIDA/ITree.h \
AIDA/IProfile.h \
AIDA/ITitleStyle.h \
AIDA/IFitParameterSettings.h \
AIDA/IBrushStyle.h \
AIDA/ITextStyle.h \
AIDA/ICloud.h \
AIDA/IModelFunction.h \
AIDA/ILineStyle.h \
AIDA/ITupleEntry.h \
AIDA/IConstants.h \
AIDA/IFunctionFactory.h \
AIDA/IFitResult.h \
AIDA/IPlotterFactory.h \
AIDA/IHistogram1D.h \
AIDA/IDataPoint.h \
AIDA/IManagedObject.h \
AIDA/IHistogram3D.h \
AIDA/IFilter.h \
AIDA/IHistogramFactory.h \
AIDA/IMeasurement.h \
AIDA/IProfile1D.h \
AIDA/IDataPointSetFactory.h \
AIDA/ITreeFactory.h \
AIDA/ITuple.h \
AIDA/ICloud1D.h \
AIDA/IFitter.h \
AIDA/ICloud3D.h \
AIDA/IPlotterRegion.h \
AIDA/IEvaluator.h \
AIDA/IMarkerStyle.h \
AIDA/IAxis.h \
AIDA/IFillStyle.h \
AIDA/IRangeSet.h \
AIDA/IFitFactory.h \
AIDA/IAnnotation.h \
AIDA/IPlotterStyle.h \
AIDA/IAnalysisFactory.h \
AIDA/IFitData.h \
AIDA/IInfoStyle.h 
# LWH/AIHistogram1D.h \
# LWH/AIManagedObject.h \
# LWH/AIDataPoint.h \
# LWH/DataPointSet.h \
# LWH/AIProfile1D.h \
# LWH/AIMeasurement.h \
# LWH/AIHistogramFactory.h \
# LWH/Tree.h \
# LWH/AITreeFactory.h \
# LWH/AIDataPointSetFactory.h \
# LWH/Axis.h \
# LWH/AITree.h \
# LWH/AIDataPointSet.h \
# LWH/AnalysisFactory.h \
# LWH/AIAxis.h \
# LWH/Histogram1D.h \
# LWH/DataPoint.h \
# LWH/ManagedObject.h \
# LWH/AIAnalysisFactory.h \
# LWH/HistogramFactory.h \
# LWH/Measurement.h \
# LWH/Profile1D.h \
# LWH/VariAxis.h \
# LWH/DataPointSetFactory.h \
# LWH/TreeFactory.h
