dnl Process this file with autoconf to produce a configure script.
AC_INIT(HepMCView, 0.1, andy@insectnation.org)
AC_CONFIG_HEADERS(Config.hh)
AC_CONFIG_SRCDIR(HepMCView.cc)

AM_INIT_AUTOMAKE

AC_DISABLE_STATIC
AC_PROG_LIBTOOL
AM_PATH_PYTHON(2.3)
AC_PROG_SWIG(1.3.21)
SWIG_ENABLE_CXX
SWIG_PYTHON

AC_OUTPUT(Makefile)
