dist_pkgdata_DATA = \
  ALEPH_1991_S2435284.info.yaml \
  ALEPH_1996_S3486095.info.yaml \
  CDF_1990_S2089246.info.yaml \
  CDF_1994_S2952106.info.yaml \
  CDF_2000_S4155203.info.yaml \
  CDF_2001_S4751469.info.yaml \
  CDF_2002_S4796047.info.yaml \
  CDF_2004_S5839831.info.yaml \
  CDF_2005_S6217184.info.yaml \
  CDF_2006_S6653332.info.yaml \
  CDF_2007_S7057202.info.yaml \
  CDF_2008_LEADINGJETS.info.yaml \
  CDF_2008_NOTE_9351.info.yaml \
  CDF_2008_S7540469.info.yaml \
  CDF_2008_S7541902.info.yaml \
  CDF_2008_S7782535.info.yaml \
  CDF_2008_S7828950.info.yaml \
  CDF_2008_S8093652.info.yaml \
  CDF_2008_S8095620.info.yaml \
  CDF_2009_S8233977.info.yaml \
  D0_2001_S4674421.info.yaml \
  D0_2004_S5992206.info.yaml \
  D0_2006_S6438750.info.yaml \
  D0_2007_S7075677.info.yaml \
  D0_2008_S6879055.info.yaml \
  D0_2008_S7554427.info.yaml \
  D0_2008_S7662670.info.yaml \
  D0_2008_S7719523.info.yaml \
  D0_2008_S7837160.info.yaml \
  D0_2008_S7863608.info.yaml \
  D0_2009_S8202443.info.yaml \
  D0_2009_S8320160.info.yaml \
  DELPHI_1995_S3137023.info.yaml \
  DELPHI_1996_S3430090.info.yaml \
  DELPHI_2002_069_CONF_603.info.yaml \
  DELPHI_2003_WUD_03_11.info.yaml \
  EXAMPLE.info.yaml \
  EXAMPLETREE.info.yaml \
  H1_1994_S2919893.info.yaml \
  H1_1995_S3167097.info.yaml \
  H1_2000_S4129130.info.yaml \
  JADE_OPAL_2000_S4300807.info.yaml \
  MC_LHC_LEADINGJETS.info.yaml \
  MC_TVT1960_ZJETS.info.yaml \
  OPAL_1998_S3780481.info.yaml \
  PDG_HADRON_MULTIPLICITIES.info.yaml \
  PDG_HADRON_MULTIPLICITIES_RATIOS.info.yaml \
  STAR_2006_S6870392.info.yaml \
  STAR_2008_S7993412.info.yaml \
  ZEUS_2001_S4815815.info.yaml
