dist_pkgdata_DATA = \
  ALEPH_1991_S2435284.info \
  ALEPH_1996_S3486095.info \
  ALEPH_1996_S3196992.info \
  ALEPH_2004_S5765862.info \
  ALICE_2010_S8706239.info \
  ALICE_2010_S8625980.info \
  ATLAS_2010_S8591806.info \
  ATLAS_2010_S8817804.info \
  ATLAS_2010_CONF_2010_031.info \
  ATLAS_2010_CONF_2010_049.info \
  ATLAS_2010_CONF_2010_081.info \
  ATLAS_2010_CONF_2010_083.info \
  BELLE_2006_S6265367.info \
  CDF_1988_S1865951.info \
  CDF_1990_S2089246.info \
  CDF_1991_S2313472.info \
  CDF_1993_S2742446.info \
  CDF_1994_S2952106.info \
  CDF_1996_S3108457.info \
  CDF_1996_S3349578.info \
  CDF_1996_S3418421.info \
  CDF_1997_S3541940.info \
  CDF_1998_S3618439.info \
  CDF_2000_S4155203.info \
  CDF_2000_S4266730.info \
  CDF_2001_S4517016.info \
  CDF_2001_S4563131.info \
  CDF_2001_S4751469.info \
  CDF_2002_S4796047.info \
  CDF_2004_S5839831.info \
  CDF_2005_S6080774.info \
  CDF_2005_S6217184.info \
  CDF_2006_S6450792.info \
  CDF_2006_S6653332.info \
  CDF_2007_S7057202.info \
  CDF_2008_LEADINGJETS.info \
  CDF_2008_NOTE_9351.info \
  CDF_2008_S7540469.info \
  CDF_2008_S7541902.info \
  CDF_2008_S7782535.info \
  CDF_2008_S7828950.info \
  CDF_2008_S8093652.info \
  CDF_2008_S8095620.info \
  CDF_2009_S8233977.info \
  CDF_2009_NOTE_9936.info \
  CDF_2009_S8383952.info \
  CDF_2009_S8436959.info \
  D0_1996_S3214044.info \
  D0_1996_S3324664.info \
  D0_1998_S3711838.info \
  D0_2000_S4480767.info \
  D0_2001_S4674421.info \
  D0_2004_S5992206.info \
  D0_2006_S6438750.info \
  D0_2007_S7075677.info \
  D0_2008_S6879055.info \
  D0_2008_S7554427.info \
  D0_2008_S7662670.info \
  D0_2008_S7719523.info \
  D0_2008_S7837160.info \
  D0_2008_S7863608.info \
  D0_2009_S8202443.info \
  D0_2009_S8320160.info \
  D0_2009_S8349509.info \
  D0_2010_S8566488.info \
  D0_2010_S8570965.info \
  D0_2010_S8671338.info \
  E735_1998_S3905616.info \
  DELPHI_1995_S3137023.info \
  DELPHI_1996_S3430090.info \
  DELPHI_2002_069_CONF_603.info \
  DELPHI_2003_WUD_03_11.info \
  EXAMPLE.info \
  EXAMPLETREE.info \
  H1_1994_S2919893.info \
  H1_1995_S3167097.info \
  H1_2000_S4129130.info \
  JADE_OPAL_2000_S4300807.info \
  MC_GENERIC.info \
  MC_LEADINGJETS.info \
  MC_DIJET.info \
  MC_DIPHOTON.info \
  MC_PHOTONJETUE.info \
  MC_SUSY.info \
  MC_TTBAR.info \
  MC_JETS.info \
  MC_PHOTONJETS.info \
  MC_HJETS.info \
  MC_WJETS.info \
  MC_WWJETS.info \
  MC_ZJETS.info \
  MC_ZZJETS.info \
  OPAL_1993_S2692198.info \
  OPAL_1998_S3780481.info \
  OPAL_2001_S4553896.info \
  OPAL_2004_S6132243.info \
  PDG_HADRON_MULTIPLICITIES.info \
  PDG_HADRON_MULTIPLICITIES_RATIOS.info \
  SFM_1984_S1178091.info \
  STAR_2006_S6500200.info \
  STAR_2006_S6860818.info \
  STAR_2006_S6870392.info \
  STAR_2008_S7869363.info \
  STAR_2008_S7993412.info \
  STAR_2009_UE_HELEN.info \
  ZEUS_2001_S4815815.info \
  UA1_1990_S2044935.info \
  UA5_1982_S875503.info \
  UA5_1986_S1583476.info \
  UA5_1987_S1640666.info \
  UA5_1988_S1867512.info \
  UA5_1989_S1926373.info
