dist_pkgdata_DATA = \
  ALEPH_1991_S2435284.plot \
  ALEPH_1996_S3486095.plot \
  ALEPH_1996_S3196992.plot \
  CDF_1988_S1865951.plot \
  CDF_1990_S2089246.plot \
  CDF_1994_S2952106.plot \
  CDF_1996_S3108457.plot \
  CDF_1996_S3349578.plot \
  CDF_2000_S4155203.plot \
  CDF_2001_S4751469.plot \
  CDF_2002_S4796047.plot \
  CDF_2004_S5839831.plot \
  CDF_2005_S6080774.plot \
  CDF_2005_S6217184.plot \
  CDF_2006_S6450792.plot \
  CDF_2006_S6653332.plot \
  CDF_2007_S7057202.plot \
  CDF_2008_LEADINGJETS.plot \
  CDF_2008_NOTE_9351.plot \
  CDF_2008_S7540469.plot \
  CDF_2008_S7541902.plot \
  CDF_2008_S7782535.plot \
  CDF_2008_S7828950.plot \
  CDF_2008_S8093652.plot \
  CDF_2008_S8095620.plot \
  CDF_2009_S8233977.plot \
  CDF_2009_S8383952.plot \
  CDF_2009_S8436959.plot \
  D0_1996_S3214044.plot \
  D0_1996_S3324664.plot \
  D0_2001_S4674421.plot \
  D0_2004_S5992206.plot \
  D0_2006_S6438750.plot \
  D0_2007_S7075677.plot \
  D0_2008_S6879055.plot \
  D0_2008_S7554427.plot \
  D0_2008_S7662670.plot \
  D0_2008_S7719523.plot \
  D0_2008_S7837160.plot \
  D0_2008_S7863608.plot \
  D0_2009_S8202443.plot \
  D0_2009_S8320160.plot \
  D0_2009_S8349509.plot \
  E735_1998_S3905616.plot \
  DELPHI_1995_S3137023.plot \
  DELPHI_1996_S3430090.plot \
  DELPHI_2002_069_CONF_603.plot \
  EXAMPLE.plot \
  H1_1994_S2919893.plot \
  H1_1995_S3167097.plot \
  H1_2000_S4129130.plot \
  JADE_OPAL_2000_S4300807.plot \
  MC_LHC_LEADINGJETS.plot \
  MC_LHC_DIJET.plot \
  MC_LHC_DIPHOTON.plot \
  MC_LHC_PHOTONJETUE.plot \
  MC_LHC_ZANALYSIS.plot \
  MC_LHC_WANALYSIS.plot \
  MC_LHC_SUSY.plot \
  MC_LHC_TTBAR.plot \
  MC_TVT1960_PHOTONJETS.plot \
  MC_TVT1960_ZJETS.plot \
  OPAL_1998_S3780481.plot \
  OPAL_2004_S6132243.plot \
  PDG_HADRON_MULTIPLICITIES.plot \
  PDG_HADRON_MULTIPLICITIES_RATIOS.plot \
  SFM_1984_S1178091.plot \
  STAR_2006_S6500200.plot \
  STAR_2006_S6870392.plot \
  STAR_2008_S7993412.plot \
  STAR_2009_UE_HELEN.plot \
  ZEUS_2001_S4815815.plot \
  UA1_1990_S2044935.plot \
  UA5_1982_S875503.plot \
  UA5_1986_S1583476.plot \
  UA5_1988_S1867512.plot \
  UA5_1989_S1926373.plot
