dist_pkgdata_DATA = \
  LHCB_2010_S8758301.aida \
  LHCB_2011_I917009.aida \
  LHCB_2011_I919315.aida \
  JADE_OPAL_2000_S4300807.aida \
  JADE_1998_S3612880.aida \
  TASSO_1990_S2148048.aida \
  ALEPH_1991_S2435284.aida \
  ALEPH_1996_S3486095.aida \
  ALEPH_1996_S3196992.aida \
  ALEPH_1999_S4193598.aida \
  ALEPH_2001_S4656318.aida \
  ALEPH_2002_S4823664.aida \
  ALEPH_2004_S5765862.aida \
  ALICE_2010_S8624100.aida \
  ALICE_2010_S8625980.aida \
  ALICE_2010_S8706239.aida \
  ALICE_2011_S8909580.aida \
  ALICE_2011_S8945144.aida \
  ARGUS_1993_S2653028.aida \
  ARGUS_1993_S2669951.aida \
  ARGUS_1993_S2789213.aida \
  ATLAS_2010_S8591806.aida \
  ATLAS_2010_S8817804.aida \
  ATLAS_2010_S8894728.aida \
  ATLAS_2010_S8914702.aida \
  ATLAS_2010_S8918562.aida \
  ATLAS_2010_S8919674.aida \
  ATLAS_2011_S8924791.aida \
  ATLAS_2011_S8971293.aida \
  ATLAS_2011_S8994773.aida \
  ATLAS_2011_S9002537.aida \
  ATLAS_2010_CONF_2010_049.aida \
  ATLAS_2011_S9120807.aida \
  ATLAS_2011_S9126244.aida \
  ATLAS_2011_S9128077.aida \
  ATLAS_2011_S9131140.aida \
  ATLAS_2011_I919017.aida \
  ATLAS_2011_I925932.aida \
  ATLAS_2011_I926145.aida \
  ATLAS_2011_I944826.aida \
  ATLAS_2011_I945498.aida \
  ATLAS_2011_I954993.aida \
  ATLAS_2011_S9225137.aida \
  ATLAS_2011_S9212183.aida \
  ATLAS_2012_I1082936.aida \
  ATLAS_2012_I1083318.aida \
  ATLAS_2012_I1084540.aida \
  ATLAS_2012_I1091481.aida \
  ATLAS_2012_I1093738.aida \
  ATLAS_2012_I1094568.aida \
  ATLAS_2012_I943401.aida \
  ATLAS_2012_I1082009.aida \
  ATLAS_2012_I1183818.aida \
  ATLAS_2012_CONF_2012_001.aida \
  BABAR_2005_S6181155.aida \
  BABAR_2006_S6511112.aida \
  BABAR_2007_S6895344.aida \
  BABAR_2007_S7266081.aida \
  BELLE_2001_S4598261.aida \
  BELLE_2006_S6265367.aida \
  CLEO_1997_S3486664.aida \
  CLEO_2001_S4557530.aida \
  CLEO_2004_S5809304.aida \
  CMS_2010_S8547297.aida \
  CMS_2010_S8656010.aida \
  CMS_2011_S8884919.aida \
  CMS_2011_S8941262.aida \
  CMS_2011_S8950903.aida \
  CMS_2011_S8957746.aida \
  CMS_2011_S8968497.aida \
  CMS_2011_S8973270.aida \
  CMS_2011_S8978280.aida \
  CMS_2011_S9086218.aida \
  CMS_2011_S9088458.aida \
  CMS_2011_S9120041.aida \
  CMS_2011_S9215166.aida \
  CMS_2012_I1087342.aida \
  CMS_2012_I1107658.aida \
  CMS_QCD_10_024.aida \
  DELPHI_1994_S3021912.aida \
  DELPHI_1995_S3137023.aida \
  DELPHI_1996_S3430090.aida \
  DELPHI_1999_S3960137.aida \
  DELPHI_2000_S4328825.aida \
  DELPHI_2002_069_CONF_603.aida \
  DELPHI_2003_WUD_03_11.aida \
  OPAL_1993_S2692198.aida \
  OPAL_1994_S2927284.aida \
  OPAL_1995_S3198391.aida \
  OPAL_1996_S3257789.aida \
  OPAL_1997_S3396100.aida \
  OPAL_1997_S3608263.aida \
  OPAL_1998_S3702294.aida \
  OPAL_1998_S3780481.aida \
  OPAL_1998_S3749908.aida \
  OPAL_2000_S4418603.aida \
  OPAL_2001_S4553896.aida \
  OPAL_2002_S5361494.aida \
  OPAL_2004_S6132243.aida \
  H1_1994_S2919893.aida \
  H1_1995_S3167097.aida \
  H1_2000_S4129130.aida \
  H1_2007_S7223935.aida \
  ZEUS_2001_S4815815.aida \
  PHENIX_2003_S5538505.aida \
  STAR_2006_S6500200.aida \
  STAR_2006_S6860818.aida \
  STAR_2006_S6870392.aida \
  STAR_2008_S7993412.aida \
  STAR_2009_UE_HELEN.aida \
  BRAHMS_2007_S7052448.aida \
  UA1_1990_S2044935.aida \
  UA5_1982_S875503.aida \
  UA5_1986_S1583476.aida \
  UA5_1989_S1926373.aida \
  UA5_1988_S1867512.aida \
  UA5_1987_S1640666.aida \
  CDF_1988_S1865951.aida \
  CDF_1990_S2089246.aida \
  CDF_1993_S2742446.aida \
  CDF_1994_S2952106.aida \
  CDF_1996_S3108457.aida \
  CDF_1996_S3349578.aida \
  CDF_1996_S3418421.aida \
  CDF_1997_S3541940.aida \
  CDF_1998_S3618439.aida \
  CDF_2000_S4155203.aida \
  CDF_2000_S4266730.aida \
  CDF_2001_S4517016.aida \
  CDF_2001_S4563131.aida \
  CDF_2001_S4751469.aida \
  CDF_2002_S4796047.aida \
  CDF_2004_S5839831.aida \
  CDF_2005_S6080774.aida \
  CDF_2005_S6217184.aida \
  CDF_2006_S6450792.aida \
  CDF_2006_S6653332.aida \
  CDF_2007_S7057202.aida \
  CDF_2008_S7541902.aida \
  CDF_2008_S7554427.aida \
  CDF_2008_S7540469.aida \
  CDF_2008_S7782535.aida \
  CDF_2008_S7828950.aida \
  CDF_2008_S8093652.aida \
  CDF_2008_S8095620.aida \
  CDF_2008_NOTE_9351.aida \
  CDF_2008_LEADINGJETS.aida \
  CDF_2009_S8233977.aida \
  CDF_2009_NOTE_9936.aida \
  CDF_2009_S8383952.aida \
  CDF_2009_S8436959.aida \
  CDF_2010_S8591881_DY.aida \
  CDF_2010_S8591881_QCD.aida \
  CDF_2012_NOTE10874.aida \
  D0_1996_S3214044.aida \
  D0_1996_S3324664.aida \
  D0_2000_S4480767.aida \
  D0_2001_S4674421.aida \
  D0_2004_S5992206.aida \
  D0_2006_S6438750.aida \
  D0_2007_S7075677.aida \
  D0_2008_S6879055.aida \
  D0_2008_S7554427.aida \
  D0_2008_S7662670.aida \
  D0_2008_S7719523.aida \
  D0_2008_S7837160.aida \
  D0_2008_S7863608.aida \
  D0_2009_S8202443.aida \
  D0_2009_S8320160.aida \
  D0_2009_S8349509.aida \
  D0_2010_S8566488.aida \
  D0_2010_S8570965.aida \
  D0_2010_S8671338.aida \
  D0_2010_S8821313.aida \
  D0_2011_I895662.aida \
  E735_1992_S2485869.aida \
  E735_1993_S2896508.aida \
  E735_1998_S3905616.aida \
  SFM_1984_S1178091.aida \
  SLD_1996_S3398250.aida \
  SLD_1999_S3743934.aida \
  SLD_2002_S4869273.aida \
  SLD_2004_S5693039.aida \
  STAR_2008_S7869363.aida \
  TOTEM_2012_I1115294.aida \
  PDG_HADRON_MULTIPLICITIES.aida \
  PDG_HADRON_MULTIPLICITIES_RATIOS.aida
