## Internal headers - not to be installed
nobase_dist_noinst_HEADERS = 
## Public headers - to be installed
nobase_pkginclude_HEADERS = 


## Rivet interface
nobase_pkginclude_HEADERS += \
  Rivet.hh \
  Constraints.hh      BeamConstraint.hh   \
  Cuts.hh             Cuts.fhh            \
  Event.hh            Event.fhh           \
  Particle.hh         Particle.fhh        \
  RivetAIDA.hh        RivetAIDA.fhh       \
  Analysis.hh         Analysis.fhh        \
  AnalysisHandler.hh  AnalysisHandler.fhh \
  Projection.hh       Projection.fhh      \
  Cmp.hh              Cmp.fhh             \
  ParticleName.hh     HistoFormat.hh      \
  Jet.hh              AnalysisLoader.hh

## Standard analyses
nobase_pkginclude_HEADERS += \
  Analyses/ExampleAnalysis.hh \
  Analyses/ExampleTree.hh     
nobase_dist_noinst_HEADERS += \
  Analyses/ALEPH_1991_S2435284.hh \
  Analyses/CDF_1994_S2952106.hh \
  Analyses/CDF_2001_S4751469.hh \
  Analyses/CDF_2005_S6217184.hh \
  Analyses/CDF_2006_S6653332.hh \
  Analyses/CDF_2007_S7057202.hh \
  Analyses/D0_2001_S4674421.hh \
  Analyses/D0_2004_S5992206.hh \
  Analyses/DELPHI_1996_S3430090.hh \
  Analyses/H1_1995_S3167097.hh \
  Analyses/OPAL_2004_S6132243.hh \
  Analyses/ZEUS_2001_S4815815.hh

## Projections
nobase_pkginclude_HEADERS +=   \
  Projections/AxesDefinition.hh \
  Projections/Beam.hh           \
  Projections/CentralEtHCM.hh   \
  Projections/ChargedFinalState.hh \
  Projections/ChargedLeptons.hh \
  Projections/DISKinematics.hh  \
  Projections/DISLepton.hh      \
  Projections/D0ILConeJets.hh   \
  Projections/FastJets.hh       \
  Projections/FinalState.hh     \
  Projections/FinalStateHCM.hh  \
  Projections/HadronicFinalState.hh \
  Projections/Hemispheres.hh    \
  Projections/JetAlg.hh         \
  Projections/JetShape.hh       \
  Projections/KtJets.hh         \
  Projections/LossyFinalState.hh \
  Projections/Multiplicity.hh   \
  Projections/ParisiTensor.hh   \
  Projections/PVertex.hh        \
  Projections/Sphericity.hh     \
  Projections/SVertex.hh	    \
  Projections/Thrust.hh         \
  Projections/TotalVisibleMomentum.hh \
  Projections/TrackJet.hh       \
  Projections/VetoedFinalState.hh \
  Projections/WZandh.hh 

## Tools
nobase_pkginclude_HEADERS += \
  Tools/Logging.hh  \
  Tools/Logging.fhh \
  Tools/Configuration.hh \
  Tools/Utils.hh \
  Tools/BinnedHistogram.hh \
  Tools/ParticleIDMethods.hh

nobase_pkginclude_HEADERS += \
  Math/Matrices.hh \
  Math/Vector3.hh \
  Math/VectorN.hh \
  Math/MatrixN.hh \
  Math/MatrixDiag.hh \
  Math/MathHeader.hh \
  Math/Vectors.hh \
  Math/LorentzTrans.hh \
  Math/Matrix3.hh \
  Math/MathUtils.hh \
  Math/Vector4.hh \
  Math/Math.hh \
  Math/Units.hh \
  Math/Constants.hh \
  Math/eigen/util.h \
  Math/eigen/regressioninternal.h \
  Math/eigen/regression.h \
  Math/eigen/vector.h \
  Math/eigen/ludecompositionbase.h \
  Math/eigen/ludecomposition.h \
  Math/eigen/linearsolver.h \
  Math/eigen/linearsolverbase.h \
  Math/eigen/matrix.h \
  Math/eigen/vectorbase.h \
  Math/eigen/projective.h \
  Math/eigen/matrixbase.h 

## D0 internals
nobase_dist_noinst_HEADERS += \
  Tools/D0RunIIcone/HepEntity.h \
  Tools/D0RunIIcone/energycluster/ConeJetInfo.hpp \
  Tools/D0RunIIcone/energycluster/ConeSplitMerge.hpp \
  Tools/D0RunIIcone/energycluster/ProtoJet.hpp \
  Tools/D0RunIIcone/energycluster/ILConeAlgorithm.hpp
